# darshan

./: .cirrus.yml  .codecov.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  COPYRIGHT  ChangeLog  INSTALL  MPI_File_write.darshan_log  Makefile.am  Makefile.in  README  README.md  README.nompi.md  SECURITY.md  conf.py  configure  configure.ac  configure.in  darshan-abcxyz-log-format.h  darshan-analyzer.c  darshan-bgq-log-format.h  darshan-config.h.in  darshan-convert-logs.pl  darshan-convert.c  darshan-daos-log-format.h  darshan-diff.c  darshan-dxlt-log-format.h  darshan-dxt-log-format.h  darshan-gen-cc.pl  darshan-gen-cc.pl.in  darshan-gen-cxx.pl.in  darshan-gen-fortran.pl.in  darshan-hdf5-log-format.h  darshan-load-mysql.c  darshan-log-format.h  darshan-log-params.c  darshan-logutils.c  darshan-logutils.h  (+17 more)
darshan-runtime/: INSTALL  Makefile.am  Makefile.in  configure  configure.ac  configure.in  darshan-base-ld-opts.in  darshan-common.h  darshan-config.in  darshan-core.h  darshan-dxt.h  darshan-dynamic.h  darshan-gen-cc.pl.in  darshan-gen-cxx.pl.in  darshan-gen-fortran.pl.in  darshan-hdf5-ld-opts  darshan-lustre.h  darshan-mk-log-dirs.pl.in  darshan-module-api.h  darshan-mpi.h  darshan-posix-ld-opts  darshan-runtime-config.h.in  darshan.h  mpi.c  no-mpi.c  prepare
darshan-runtime/doc/: Makefile  darshan-runtime.md  darshan-runtime.rst  darshan-runtime.txt
darshan-runtime/gotcha-demo-test-case/: Makefile
darshan-runtime/lib/: Makefile.am  darshan-abcxyz.c  darshan-aux-dyn.c  darshan-bgq.c  darshan-common.c  darshan-common.h  darshan-config.c  darshan-config.h  darshan-core-init-finalize.c  darshan-core.c  darshan-core.h  darshan-daos.c  darshan-dfs.c  darshan-dxlt.c  darshan-dxt.c  darshan-dxt.h  darshan-dynamic.h  darshan-ext.h  darshan-file.c  darshan-file.h  darshan-hdf5-dummy.c  darshan-hdf5-stubs.c  darshan-hdf5.c  darshan-heatmap.c  darshan-heatmap.h  darshan-ldms.c  darshan-ldms.h  darshan-lustre.c  darshan-lustre.h  darshan-lustre_old.c  darshan-mdhim.c  darshan-mpi-datatypes.c  darshan-mpi-init-finalize.c  darshan-mpi-io.c  darshan-mpiio.c  darshan-null.c  darshan-pnetcdf-api.m4  darshan-pnetcdf-dummy.c  darshan-pnetcdf-stubs.c  darshan-pnetcdf.c  (+4 more)
darshan-runtime/lib/pkgconfig/: darshan-runtime.pc.in
darshan-runtime/maint/: generate-bgq-compilers.sh  install-eureka.sh  install-gadzooks.sh  install-intrepid.sh  install-surveyor.sh  upgrade-eureka.sh  upgrade-gadzooks.sh  upgrade-intrepid.sh  upgrade-surveyor.sh
darshan-runtime/pkgconfig/: Makefile.am  darshan-runtime.pc.in
darshan-runtime/share/: Makefile.am  darshan-mmap-epilog.sh.in
darshan-runtime/share/cray/: cray-xt-asyncpe-5.10-darshan.patch  cray-xt-asyncpe-5.12-darshan.patch  darshan-module.in
darshan-runtime/share/craype-1.x/: Makefile.am  darshan-module.in
darshan-runtime/share/craype-2.x/: Makefile.am  darshan-module.in
darshan-runtime/share/ld-opts/: Makefile.am  darshan-abcxyz-opts  darshan-base-ld-opts  darshan-base-ld-opts.in  darshan-daos-ld-opts  darshan-dfs-ld-opts  darshan-hdf5-ld-opts  darshan-hdf5-ld-opts.in  darshan-mdhim-ld-opts  darshan-mpiio-ld-opts  darshan-pnetcdf-ld-opts  darshan-posix-ld-opts  darshan-stdio-ld-opts  darshan-stdio-ld-opts.in
darshan-runtime/share/mpi-profile/: Makefile.am  darshan-bg-cxx.conf.in  darshan-bg-f.conf.in  darshan-cc-static.conf.in  darshan-cc.conf.in  darshan-cxx-static.conf.in  darshan-cxx.conf.in  darshan-f-static.conf.in  darshan-f.conf.in
darshan-runtime/test/: Makefile.am  tst_mpi_init.c  tst_mpi_io.c  tst_runs.sh
darshan-util/: Makefile  Makefile.am  Makefile.in  configure  configure.ac  configure.in  darshan-abcxyz-logutils.c  darshan-abcxyz-logutils.h  darshan-analyzer.c  darshan-base-parser.c  darshan-bgq-logutils.c  darshan-bgq-logutils.h  darshan-bgq-parser.c  darshan-convert-logs.pl  darshan-convert.c  darshan-daos-logutils.c  darshan-daos-logutils.h  darshan-dfs-logutils.c  darshan-diff.c  darshan-dxlt-logutils.c  darshan-dxlt-logutils.h  darshan-dxt-logutils.c  darshan-dxt-logutils.h  darshan-dxt-parser.c  darshan-gen-io-trace.c  darshan-hdf5-logutils.c  darshan-hdf5-logutils.h  darshan-heatmap-logutils.c  darshan-heatmap-logutils.h  darshan-io-events.h  darshan-load-mysql.c  darshan-log-params.c  darshan-log-replay.c  darshan-logutils-accumulator.c  darshan-logutils.c  darshan-logutils.h  darshan-lustre-logutils.c  darshan-lustre-logutils.h  darshan-mdhim-logutils.c  darshan-mdhim-logutils.h  (+25 more)
darshan-util/compat/: darshan-logutils-compat.c  darshan-logutils-compat.h
darshan-util/darshan-job-summary/: Makefile.am
darshan-util/darshan-job-summary/share/: access-hist-eps.gplt  counts-pdf.gplt  file-access-eps.gplt  file-access-table.tex  job-table.tex  op-counts-eps.gplt  pattern-eps.gplt  summary.tex  title.tex
darshan-util/doc/: Makefile  darshan-util.rst  darshan-util.txt  docbook-xsl.css  dxt_analyzer.txt
darshan-util/dxt_analyzer/: darshan_dxt-c.txt
darshan-util/maint/: darshan-util.pc.in  install-eureka.sh  install-gadzooks.sh  install-surveyor.sh  upgrade-eureka.sh  upgrade-gadzooks.sh  upgrade-intrepid.sh  upgrade-surveyor.sh
darshan-util/pydarshan/: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  RELEASE-CHECKLIST-PyDarshan.txt  glob_feature.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_examples.txt  setup.cfg  setup.py  tox.ini
darshan-util/pydarshan/benchmarks/: asv.conf.json
darshan-util/pydarshan/darshan/: __init__.py  __main__.py  api_def_c.py  common.py  debug.py  derived_metrics.py  discover_darshan.py  error.py  extension.c  log_utils.py  parser_ascii.py  (+3 more)
include/: Makefile.am  darshan-bgq-log-format.h  darshan-daos-log-format.h  darshan-dfs-log-format.h  darshan-dxt-log-format.h  darshan-hdf5-log-format.h  darshan-heatmap-log-format.h  darshan-log-format.h  darshan-lustre-log-format.h  darshan-mpiio-log-format.h  darshan-null-log-format.h  darshan-pnetcdf-log-format.h  darshan-posix-log-format.h
modules/: Makefile.am  apmpi.patch  orig_darshan-apmpi.c  patched_darshan-apmpi.c
(+549 files in other folders)
