#
# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

ACLOCAL_AMFLAGS = -I ../maint/config

SUBDIRS = lib pkgconfig share

bin_SCRIPTS = darshan-config \
              darshan-gen-cc.pl \
              darshan-gen-cxx.pl \
              darshan-gen-fortran.pl \
              darshan-mk-log-dirs.pl

EXTRA_DIST = darshan-config.in \
             doc

